Fixed nav on smaller devices and cleaned up default html

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -144,7 +144,10 @@ body {
     background-color: #FFFFFF;
   }
 
-  @include media-query($on-palm) {
+}
+
+@media (max-device-width: $on-palm) {
+  .site-nav {
     position: absolute;
     top: 9px;
     right: $spacing-unit / 2;
@@ -158,7 +161,7 @@ body {
       display: block;
       float: right;
       width: 36px;
-      height: 26px;
+      height: 36px;
       line-height: 0;
       padding-top: 10px;
       text-align: center;
@@ -184,6 +187,8 @@ body {
     }
 
     .page-link-3 {
+      color: #424242;
+      background-color: transparent;
       display: block;
       padding: 5px 10px;
 
